Add tests for InfluxDbHttpReporter (implemented HTTP server)